# qai-trader

./: .env.example  .gitignore  .qai_state.json  .release_status.json  AUDIT_REPORT_2025-11-06.md  BRIDGE_SETUP_GUIDE.md  CHANGELOG.md  IMPLEMENTATION_SUCCESS.md  README.md  TODO_v0.2.0.json  TODO_v0.3.0.json  TODO_v0.4.0.json  TODO_v0.5.0.json  TODO_v0.6.0.json  TODO_v0.7.0.json  WINDOWS_SETUP_GUIDE.md  pyproject.toml  requirements.txt
config/: config.yaml
core/: bridge_server.py
example_signals_test/: EURUSD_BUY_20251030T040241Z.sig.json
logs/: bridge_server.out
mt5/: QAI_Bridge_Client.mq5  QAI_Bridge_Client_Local.mq5  README.md  qai_bridge.mq5
reports/: evaluation_metrics.csv  evaluation_report.json
scripts/: check_windows_setup.ps1  emit_example_signal.py  recover_state.py  run_dev.bat  run_mt5_client.py  run_simulator.py  start_bridge_server.ps1  start_bridge_server.sh  test_bridge_local.ps1  test_bridge_server.sh  test_bridge_windows.ps1  train_pytorch_stub.py  train_stub.py
src/: __init__.py
tests/: test_adaptive_metrics.py  test_adaptive_strategy.py  test_ai_smoke.py  test_audit_verification.py  test_backtest_simulator.py  test_backtester.py  test_dashboard_multisession.py  test_deploy_validation.py  test_deployment_validator.py  test_distributed_validator.py  test_evaluation_pipeline.py  test_experiment_engine.py  test_hmac_utils.py  test_integrations_ci.py  test_integrations_external.py  test_optimizer_rl.py  test_predictor_integration.py  test_pytorch_trainer.py  test_rl_adaptive_optimizer.py  test_rl_continuous.py  test_scoring_integration.py  (+6 more)
(+57 files in other folders)
