[tool.poetry]
name = "qai-trader"
version = "0.1.0"
description = "Scaffold for a QUANT AI intraday trading system (Sprint 0)"
authors = ["Your Name <you@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.poetry.dev-dependencies]
pytest = ">=7.0"
